--- a/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -7,14 +7,16 @@
               Especifique el monto y el tipo
             </p>
 
-            <form>
+            <form (ngSubmit)="crearIngresoEgreso()" [formGroup]="formIE" >
               
               <div class="form-group">
                 <label>Descripción</label>
                 <input type="text" 
                        class="form-control" 
                        placeholder="Descripción"
-                       name="descripcion">
+                       name="description"
+                       formControlName="description"
+                >
               </div>
 
               <div class="form-group">
@@ -22,31 +24,33 @@
                   <input type="number" 
                          class="form-control" 
                          placeholder="Monto"
-                         name="monto">
-                    <p>
-                      Debe de ser un monto positivo
-                    </p>
+                         name="amount"
+                         formControlName="amount"
+                  >
+                  <p>
+                    Debe de ser un monto positivo
+                  </p>
                 </div>
 
               <div class="form-group">
                   <label>Tipo</label>
                   <br>
-                  <button type="button" class="btn btn-primary btn-block">Ingreso</button>
-                  <!-- <button type="button" class="btn btn-warning btn-block">Egreso</button> -->
+                  <button (click)="tipo='egreso'"  *ngIf="tipo ==='ingreso'" type="button" class="btn btn-primary btn-block">Ingreso</button>
+                  <button (click)="tipo='ingreso'" *ngIf="tipo !='ingreso'" type="button" class="btn btn-warning btn-block">Egreso</button>
               </div>
 
               <hr>
-              <button type="button" class="btn btn-success mr-2">
+              <button *ngIf="!cargando"  [disabled]="formIE.invalid"  type="submit" class="btn btn-success mr-2">
                 <i class="fa fa-save"></i>
                 Agregar
               </button>
 
-              <!-- 
-                <button disabled class="btn btn-success mr-2">
-                  <i class="fa fa-spin fa-sync"></i>
-                  Espere por favor...
-                </button> 
-              -->
+              
+              <button *ngIf="cargando" disabled class="btn btn-success mr-2">
+                <i class="fa fa-spin fa-sync"></i>
+                Espere por favor...
+              </button> 
+            
               
               <button type="reset" class="btn btn-light">Cancelar</button>
 
