--- a/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -3,7 +3,14 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title">Detalle de ingreso egreso</h4>
-
+            <div class="form-group">
+              <input type="text" 
+                    class="form-control" 
+                    placeholder="Buscar ingreso egreso"
+                    name="search"
+                    ngModel
+              >
+            </div>
             <table class="table">
               <thead>
                 <tr>
@@ -14,12 +21,22 @@
                 </tr>
               </thead>
 
-              <tbody>
-                <tr>
-                  <td>Descripción</td>
-                  <td>Monto</td>
-                  <td>Tipo</td>
-                  <td>acciones</td>
+              <tbody *ngIf="items.length != 0" >
+                <tr *ngFor="let item of items ">
+                  <td>{{ item.description }}</td>
+                  <td>{{ item.amount | currency }}</td>
+                  <td>
+                    <span [ngClass]="{ 'text-success': item.type === 'ingreso', 'text-danger': item.type === 'egreso' }" >
+                      {{ item.type }}
+                    </span>
+                  </td>
+                  <td>
+                    <button (click)="borrarItem( item )"
+                            class="btn btn-danger">
+                      <i class="fa fa-trash"></i>
+                      Borrar
+                    </button>
+                  </td>
                 </tr>
               </tbody>
 
